--- a/About-me.html
+++ b/About-me.html
@@ -51,7 +51,7 @@
           </div>
         </nav>
         <div class="u-image u-image-circle u-preserve-proportions u-image-1" alt="" data-image-width="2048" data-image-height="2048"></div>
-        <p class="u-align-center u-text u-text-body-alt-color u-text-1">LOVE SHIBUYA</p>
+        <p class="u-align-center u-text u-text-body-alt-color u-text-1">LOVE MINORI</p>
       </div></header>
     <section class="u-clearfix u-image u-section-1" id="carousel_36ea">
       <div class="u-clearfix u-sheet u-sheet-1">
