--- a/About-me.html
+++ b/About-me.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Individual consultation">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>About me</title>
+    <title>shugotsuji.com</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="About-me.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
